updated alignments on button dropdowns, fixed outlines and margins

--- a/packages/studio/components/Collapsible/index.module.css
+++ b/packages/studio/components/Collapsible/index.module.css
@@ -1,8 +1,9 @@
+.titleContainer {
+  align-items: center;
+  padding: 5px;
+}
+
 .toggle {
   background: transparent;
   border: none;
-}
-
-.titleContainer {
-  align-items: center;
 }
